cicd-testing-charts/templates/deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "cicd-testing-vue"
  namespace: "default"
  labels:
    app: "cicd-testing-vue"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "cicd-testing-vue"
  template:
    metadata:
      labels:
        app: "cicd-testing-vue"
    spec:
      containers:
      - name: "cicd-testing-vue"
        image: "asia.gcr.io/ssc-windows-ui-staging/cicd-testing-vue:959e45f"
        imagePullPolicy: Always
        ports:
        - containerPort: 80
