cicd-testing-charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: sandbox-ui-cicd.raicart.io
    http:
      paths:
      - path: "/abc"
        pathType: ImplementationSpecific
        backend:
          service:
            name: "cicd-testing-vue"
            port:
              number: 80
